--- a/src/docs/asciidoc/road-to-immutability/040-container.adoc
+++ b/src/docs/asciidoc/road-to-immutability/040-container.adoc
@@ -1,3 +1,4 @@
+[#containers]
 == Containers
 
 Loosely speaking, a container is a type to which you can safely pass on your objects, it will not modify them.
