--- a/src/docs/asciidoc/road-to-immutability/030-modification.adoc
+++ b/src/docs/asciidoc/road-to-immutability/030-modification.adoc
@@ -122,12 +122,13 @@ This is intentional: no implementation should modify the data structure when `si
 Adding all elements of a collection to the object (in `addAll`) should not modify the input collection, whence the {nm}.
 Other types in the parameters have not been annotated with {nm}:
 
-* `Object` because it is deeply immutable;
+* `Object` because it is immutable;
 * `E` because it is of an unbound generic type, it has the same methods available as `Object`.
 No code statically visible to implementations of `Collection` can make modifications to `E`;
-* `Consumer` because it is a functional interface (an interface with a single abstract method); they are {nm} by definition.
+* `Consumer` because it is a functional interface (an interface with a single abstract method) in `java.util.function`; they are {ignoreModifications} by convention.
 
-In order to keep the narrative going, we defer a discussion of modification in the context of parameters of functional interface types to the section <<immutable-content>>.
+In order to keep the narrative going, we defer a discussion of modification in the context of parameters of abstract types to the sections
+<<abstract-methods>> and <<immutable-content>>.
 Here, we continue with the first use case of modification: containers.
 
 // ensure a newline at the end
