--- a/src/docs/asciidoc/road-to-immutability/077-immutable-content.adoc
+++ b/src/docs/asciidoc/road-to-immutability/077-immutable-content.adoc
@@ -132,7 +132,7 @@ We will have to revert to a contracted {ignoreModifications} annotation on the p
 The second modification, however, is one we will ignore in the `ImmutableOne` type, and _defer_ or _propagate_ to the place where a concrete implementation of the consumer is presented.
 We can ignore it here, because `t` is of level 2 immutable type; what happens to its content happens outside the zone of control of `ImmutableOne`.
 The fact that immutable content is passed on as an argument to a method of `consumer` will be reflected by a {dependent1} annotation.
-It will take care of the propagation of modifications from the concrete implementation into the hidden immutable content.
+It will take care of the propagation of modifications from the concrete implementation into the immutable content.
 
 This results in the following annotations for `visit` in `ImmutableOne`:
 
@@ -165,7 +165,7 @@ The {dependent1} annotation appears because immutable content in `list` is expos
 This annotation does not appear for the modifiable content of the level 2 immutable type (earlier also referred to as the _support data_).
 Parameters of modifiable type are already shielded from external modification by the {independent} annotation, which is "trivial" for level 2 immutable types.
 
-=== Modifiable content
+=== Modifiable vs immutable content
 
 In the following example, a field of level 2 immutable type holds explicitly mutable data:
 
@@ -205,7 +205,7 @@ class EncapsulatedImmutableArrayOfHasSize implements NonEmptyImmutableList<HasSi
     }
 }
 ----
-<1> See further, in <<content-linking>>: the immutable content of this type links to the `generator` parameter.
+<1> See further, in <<immutable-content-linking>>: the immutable content of this type links to the `generator` parameter.
 
 The object graph of the field `one` consists of a level 2 immutable type (`ImmutableOne`), which in turn holds an array of level 2 immutable type objects (`HasSize`).
 
@@ -302,117 +302,135 @@ Let us apply the `visit` method of `NonEmptyImmutableList` to `StringBuilder`:
 .Propagating the modification of _visit_
 [source,java]
 ----
-static void print(@NotModified ImmutableOne<StringBuilder> one) {
+static void print(@NotModified NonEmptyImmutableList<StringBuilder> list) {
     one.visit(System.out::println); // <1>
 }
 
-static void addNewLine(@Modified ImmutableOne<StringBuilder> one) {
+static void addNewLine(@Modified NonEmptyImmutableList<StringBuilder> list) {
     one.visit(sb -> sb.append("\n")); // <2>
 }
 ----
-<1> Non-modifying method implies no modification on the hidden immutable content of `c`.
-<2> Parameter-modifying lambda propagates modification to `c` 's hidden immutable content.
-
-Having placed the `ImmutableOne` object `one` as a parameter, we are certain that the modification annotation catches any modification to the whole object graph, including those to inaccessible content
-
-[source,java]
-----
-static void replace(@Modified ImmutableO<StringBuilder> c) {
-    one.visit(sb -> c.add(new StringBuilder("x" + sb))); // <3>
-}
-
-List<String> strings = ...
-@Modified // <4>
-void addToStrings(@NotModified Circular<StringBuilder> c) {
-c.forEach(sb -> strings.add(sb.toString()));
-}
-----
-<3> Object-modifying lambda changing `c` but not its content (the string builder it holds).
-<4> Example of modification to fields outside the scope of `Circular`.
+<1> Non-modifying method implies no modification on the immutable content of `list`.
+<2> Parameter-modifying lambda propagates a modification to `list` 's immutable content.
 
 It is item 2, `addNewLine`, that is of importance here.
-Thanks to the {dependent1} annotation, we know of a modification to `c`.
-It helps to see the for-loop written out, if we temporarily assume that we have added an implementation of `Iterable` to `Circular`:
+Thanks to the {dependent1} annotation, we know of a modification to `list`, even if `list` is of level 2 immutable type!
+It may help to see the for-loop written out, if we temporarily assume that we have added an implementation of `Iterable` to `NonEmptyImmutableList`, functionally identical to `visit`:
 
 [source,java]
 ----
-static void addNewLine(@Modified Circular<StringBuilder> c) {
-    for(StringBuilder sb: c) {
+static void addNewLine(@Modified NonEmptyImmutableList<StringBuilder> list) {
+    for(StringBuilder sb: list) {
       sb.append("\n"));
     }
 }
 ----
 
-We really need the link between `sb` and `c` for the modification on `sb` to propagate to `c`.
+We really need the link between `sb` and `list` for the modification on `sb` to propagate to `list`.
+Without this propagation, we would not be able to implement the definition of modification of parameters, as stipulated in <<modification>>, in this relatively straightforward, and probably frequently occurring situation.
 
-Without storing additional information (e.g., using an as yet undefined annotation like `@Modified1` on `c` in `addNewLine`), however, we cannot make the distinction between a modification to the string builders inside `x` and `y`, or an assignment to `x` or `y` in `Circular`, as in item 3.
-In other words, we cannot determine {m} on the parameters of `useAddNewLine` in the following example:
+Moving from `NonEmptyImmutableList` to `NonEmptyList`, defined <<NonEmptyList, here>>, which has a modifying method, allows us to contrast two different modifications:
+
+[source,java]
+----
+static void addNewLine(@Modified NonEmptyList<StringBuilder> list) {
+    list.visit(sb -> sb.append("\n")); // <1>
+}
+
+static void replace(@Modified NonEmptyList<StringBuilder> list) {
+    list.setFirst(new StringBuilder("?")); // <2>
+}
+----
+<1> Modification to the immutable content of `list`
+<2> Modification to the modifiable content of `list`
+
+Without storing additional information (e.g., using an as yet undefined annotation like `@Modified1` on `list` in `addNewLine`), however, we cannot make the distinction between a modification to the string builders inside `list`, or a modification to `list` itself.
+In other words, applying the two methods further on, we cannot
 
 .Using print and addNewLine
 [source,java]
 ----
-static String usePrint(@NotModified StringBuilder sb1,
-                       @NotModified StringBuilder sb2,
-                       @NotModified StringBuilder sb3) {
-    Circular<StringBuilder> circular = new Circular<>();
-    circular.add(sb1); // <1>
-    circular.add(sb2);
-    circular.add(sb3);
-    print(circular);
-    return circular.stream().collect(Collectors.joining());
+static String useAddNewLine(@NotModified StringBuilder input) { // <1>
+    NonEmptyList<StringBuilder> list = new One<>();
+    list.setFirst(input);
+    addNewLine(list);
+    return list.getFirst().toString();
 }
 
-static String useAddNewLine(@Modified StringBuilder sb1, //<2>
-                            @Modified StringBuilder sb2,
-                            @Modified StringBuilder sb3) {
-    Circular<StringBuilder> circular = new Circular<>();
-    circular.add(sb1);
-    circular.add(sb2);
-    circular.add(sb3);
-    addNewLine(circular); // <3>
-    return circular.stream().collect(Collectors.joining());
+static String useReplace(@NotModified StringBuilder input) {
+    NonEmptyList<StringBuilder> list = new One<>();
+    list.setFirst(input);
+    replace(list); // <2>
+    return list.getFirst().toString();
 }
 ----
-<1> `circular` now holds `sb1`
-<2> impossible to determine
-<3> The {modified} on `addNewLine` implies that `circular` has been modified, but we do not know if any of `sb1`, `sb2`, `sb3` has been affected.
+<1> Should be {modified}, however, in the 3rd statement we cannot know that the modification is to `input` rather than to `list`
+<2> This action discards `input` from `list` without modifying it.
 
-[#content-linking]
-=== Content linking
+****
+The example shows that the introduction of {dependent1} only gets us so far: from the concrete, modifying implementation, to the parameter (or field).
+We do not plan to keep track of the distinction between modification of immutable content vs modification of modifiable content to a further extent.
+****
 
-Going back to `Circular`, we see that the `add` method binds the parameter `t` to the instance by means of assignment.
-Let us call this binding of parameters of hidden immutable types _content linking_, and mark it using {dependent1}, _content dependence_:
+Finally, we mention again the modification to a field from a concrete lambda:
 
-.Extra annotation on add
+.Modification of a field outside the scope
 [source,java]
 ----
+List<String> strings = ...
 @Modified
-public void add(@Dependent1 T t) {
-    if (next) {
-        this.y = t;
-    } else {
-        this.x = t;
-    }
-    next = !next;
+void addToStrings(@NotModified NonEmptyList<StringBuilder> list) {
+  list.visit(sb -> strings.add(sb.toString()));
 }
 ----
 
-Note that content dependence implies normal independence, exactly because we are dealing with parameters of hidden immutable type.
-Thanks to this annotation, the statement `circular.add(sb1)` can content link `sb1` to circular.
-When propagating the modification of `addNewLine` 's parameter, all variables content linked to the argument get marked.
+[#immutable-content-linking]
+=== Immutable content linking
 
-A second way, next to assignment, of adding to content links is Java's for-each loop:
+Going back to `ImmutableOne`, we see that the constructor links the parameter `t` to the instance's field by means of assignment.
+Let us call this binding of parameters of immutable content to the field _content linking_, and mark it using {dependent1}, _content dependence_:
 
-.For-each loop and content linking
+.Constructor of _ImmutableOne_
 [source,java]
 ----
-Collection<StringBuilder> builders = ...;
-for(StringBuilder sb: builders) { circular.add(sb); }
+private final T t;
+
+public ImmutableOne(@Dependent1 T t) {
+    this.t = t;
+}
 ----
 
-The local loop variable `sb` gets content linked to `circular`.
-Crucially, however, it is not difficult to see that `sb` is also content linked to `builders`!
-The `Collection` API will contain an `add` method annotated as:
+Returning a part of the immutable content of the type, or exposing it as argument, both warrants a {dependent1} annotation:
+
+.More methods of _ImmutableOne_
+[source,java]
+----
+@Override @Dependent1
+public T first() {
+    return t;
+}
+
+@Override
+public void visit(@Dependent1 Consumer<T> consumer) {
+    consumer.accept(t);
+}
+----
+
+Observe that content dependence implies 'normal' independence, as described in <<linking-and-independence>> and <<linking-formally>>, exactly because we are dealing with parameters of level 2 immutable type.
+
+Another place where the immutable content linking can be seen, is the _for-each_ statement:
+
+.For-each loop and immutable content linking
+[source,java]
+----
+ImmutableList<StringBuilder> list = ...;
+List<StringBuilder> builders = ...;
+for(StringBuilder sb: list) {
+    builders.add(sb);
+}
+----
+
+Because the `Collection` API contain an `add` method annotated as:
 
 [source,java]
 ----
@@ -420,9 +438,11 @@ The `Collection` API will contain an `add` method annotated as:
 boolean add(@NotNull @Dependent1 E e) { return true; }
 ----
 
-indicating that after calling `add`, the argument will become part of the hidden immutable content of the collection.
-We reuse the annotation {dependent1} to indicate that the hidden immutable content of two objects are linked.
-Looking at a possible implementation of `addAll`:
+indicating that after calling `add`, the argument will become part of the immutable content of the collection, we conclude that the local loop variable `sb` gets content linked to the `builders` list.
+Similarly, this loop variable contains immutable content from the `list` object.
+
+We reuse the annotation {dependent1} to indicate that the immutable content of two objects are linked.
+Let us look at a possible implementation of `Collection.addAll`:
 
 .addAll
 [source,java]
@@ -436,12 +456,9 @@ boolean addAll(@NotNull1 @Dependent1 Collection<? extends E> collection) {
 ----
 
 The call to `add` content links `e` to `this`.
-Because `e` is also content linked to `c`, the parameter `collection`
-holds hidden immutable content linked to the hidden immutable content of the instance.
+Because `e` is also content linked to `c`, the parameter `collection` holds immutable content linked to the immutable content of the instance.
 
-Again, note that {dependent1} implies independence, because it deals with the hidden immutable content.
-
-We're now properly armed to see how a for-each loop can be defined as an iterator whose hidden immutable content links to that of a container.
+We're now properly armed to see how a for-each loop can be implemented using an iterator whose immutable content links to that of a level 1 immutable container.
 
 === Iterator, Iterable, loops
 
@@ -450,6 +467,7 @@ Let us start with the simplest definition of an iterator, without `remove` metho
 .Iterator, without remove
 [source,java]
 ----
+@E1Container
 interface Iterator<T> {
 
     @Modified
@@ -463,16 +481,16 @@ interface Iterator<T> {
 
 Either the `next` method, or the `hasNext` method, must make a change to the iterator, because it has to keep track of the next element.
 As such, we make both {modified}.
-Following the discussion in the previous section, `next` is {dependent1}, because it returns part of the hidden immutable content held by the iterator.
+Following the discussion in the previous section, `next` is {dependent1}, because it returns part of the immutable content held by the iterator.
 
 The interface `Iterable` is a supplier of iterators:
 
 .Iterable
 [source,java]
 ----
+@E2Container
 interface Iterable<T> {
 
-    @NotModified
     @Dependent1
     Iterator<T> iterator();
 }
@@ -480,7 +498,7 @@ interface Iterable<T> {
 
 First, creating an iterator should never be a modifying operation on a type.
 Typically, as we explore in the next section, it implies creating a sub-type, static or not, of the type implementing `Iterable`.
-Secondly, the iterator itself is independent of the fields of the implementing type, but has the ability to return its hidden immutable content.
+Secondly, the iterator itself is independent of the fields of the implementing type, but has the ability to return its immutable content.
 
 The loop, on a variable `list` of type implementing `Iterable<T>`,
 
@@ -493,19 +511,18 @@ can be interpreted as
 
 [source,java]
 ----
-Iterator<T> iterator = list.iterator();
+Iterator<T> it = list.iterator();
 while(it.hasNext()) {
     T t = it.next();
     ...
 }
 ----
 
-The iterator is {dependent1}.
-Via the `next` method, it content-links the hidden immutable content of the `list` to `t`.
+The iterator `it` content-links to `list`; via the `next` method, it content-links the immutable content of the `list` to `t`.
 
 === Independence of types
 
-A concrete implementation of an iterator is a sub-type, static or not, of the iterable type:
+A concrete implementation of an iterator is often a nested type, static or not (inner class), of the iterable type:
 
 [source,java]
 ----
@@ -548,8 +565,8 @@ public class ImmutableArray<T> implements Iterable<T> {
 For `ImmutableArray` to be level 2 immutable, the `iterator()` method must be independent of the field `elements`.
 How do we know this?
 The implementation type `IteratorImpl` cannot be level 2 immutable, because it needs to hold the state of the iterator.
-However, it should protect the fields of its enclosing type.
-We propose to add a definition for the independence of a type, very similar to the one enforced for level 2 immutability:
+However, it should protect the fields owned by its enclosing type.
+We propose to add a definition for the independence of a type, very similar to the definition of level 2 immutability:
 
 ****
 *Definition*: A type is *independent* when it follows these three rules:
@@ -593,3 +610,5 @@ public class ImmutableArray<T> implements Iterable<T> {
     }
 }
 ----
+
+The rules enforce that the data received from, or owned by, the enclosing type, remains properly shielded.
