--- a/src/docs/asciidoc/road-to-immutability/080-support-classes.adoc
+++ b/src/docs/asciidoc/road-to-immutability/080-support-classes.adoc
@@ -246,13 +246,13 @@ Properly implemented, it is an eventually level 2 immutable type.
 @E2Container(after = "t")
 public class Lazy<T> {
 
-    @NotNull1 @PropagateModification @Dependent1
+    @NotNull1 @Dependent1
     private final Supplier<T> supplier;
 
     @Final(after = "t")
     private volatile T t;
 
-    public Lazy(@NotNull1 @PropagateModification @Dependent1 Supplier<T> supplier) { // <1>
+    public Lazy(@NotNull1 @Dependent1 Supplier<T> supplier) { // <1>
         this.supplier = supplier;
     }
 
@@ -270,10 +270,9 @@ public class Lazy<T> {
     }
 }
 ----
-<1> The {propagateModification} annotation has travelled from the field to the parameter;
-so has {dependent1}.
+<1> The annotation has travelled from the field to the parameter; so the parameter has {dependent1}.
 <2> The {mark} annotation is conditional; the transition is triggered by nullity of `t`
-<3> Here `t` content links to `supplier`, as explained in <<content-linking>>.
+<3> Here `t` content links to `supplier`, as explained in <<immutable-content-linking>>, which causes the field `supplier` to be marked {dependent1}.
 The statement also causes the {nn1} annotation, as defined in <<nullable-section>>.
 
 After calling the marker method `get()`, `t` cannot be assigned anymore, and it becomes {final}.
