--- a/src/docs/asciidoc/road-to-immutability/030-modification.adoc
+++ b/src/docs/asciidoc/road-to-immutability/030-modification.adoc
@@ -8,7 +8,7 @@
 We use the term 'object graph' to denote the fields of the object, the fields of these fields, etc., to arbitrary depth.
 
 Consequently, a method is not modifying if it only reads from the object graph of the fields.
-The code analyser uses the annotations {nm} and {modified}.
+The analyser uses the annotations {nm} and {modified}.
 They are exclusive, and the analyser will compute one or the other for every method of the type.
 All non-trivial constructors are modifying, so we avoid clutter by not annotating them.
 
@@ -16,6 +16,7 @@ It follows from the definition that directly assigning to the fields also causes
 As a consequence, setters are {modified}, while getters are {nm}.
 Consider:
 
+.Example {counter:example}, modifying and non-modifying methods
 [source,java]
 ----
 class Counter {
@@ -34,6 +35,7 @@ class Counter {
     }
 }
 
+@E1Immutable // <1>
 class CountedInfo {
     @Final
     @Modified
@@ -45,6 +47,8 @@ class CountedInfo {
     }
 }
 ----
+
+<1> The next section will show that the annotation will actually be {e1container}, representing the combination of {e1immutable} and {container}.
 
 We also see in the example that the `printInfo` method is {modified}.
 This is because it calls a modifying method on one of the fields: `increment`.
@@ -68,13 +72,13 @@ Let us start by agreeing that the methods of `Object` and `String` are all {nm}.
 This is pretty obvious in the case of `toString`, `hashCode`, `getClass`.
 It is less obvious for the `wait` and other synchronization-related methods, but remember that as discussed in the <<assumptions>>, we exclude synchronization support from this discussion.
 
-Note also that we cannot add modifying methods to the type `DeeplyImmutable1` in Example 3.
+Note also that we cannot add modifying methods to the type `DeeplyImmutable1` defined <<deeply-immutable1,earlier>>.
 
 Proceeding, let us also look at (a part of) the `Collection` interface, where we've restricted the annotations to {nm} and {modified}.
-While in normal classes the analyser computes the annotations, in interfaces the user stipulates or _contracts_ behaviour by annotating:
+An abstract method without {modified} is assumed to be non-modifying, i.e., {nm} is implicitly present.
+(The reason for this choice is explained later, in <<abstract-methods>>.) While in normal classes the analyser computes the annotations, in interfaces the user stipulates or _contracts_ behaviour by annotating:
 
-[#collection-interface]
-.Modification aspects of the Collection interface
+.Example {counter:example}, [[collection-interface]] modification aspects of the `Collection` interface
 [source,java]
 ----
 public interface Collection<E> extends Iterable<E> {
@@ -84,16 +88,12 @@ public interface Collection<E> extends Iterable<E> {
     @Modified
     boolean addAll(@NotModified Collection<? extends E> collection);
 
-    @NotModified
     boolean contains(Object object);
 
-    @NotModified
     boolean containsAll(@NotModified Collection<?> c);
 
-    @NotModified
     void forEach(Consumer<? super E> action);
 
-    @NotModified
     boolean isEmpty();
 
     @Modified
@@ -102,13 +102,10 @@ public interface Collection<E> extends Iterable<E> {
     @Modified
     boolean removeAll(@NotModified Collection<?> c);
 
-    @NotModified
     int size();
 
-    @NotModified
     Stream<E> stream();
 
-    @NotModified
     Object[] toArray();
 }
 ----
@@ -116,7 +113,7 @@ public interface Collection<E> extends Iterable<E> {
 Adding an object to a collection (set, list) will cause some assignment somewhere inside the data structure.
 Returning the size of the collection should not.
 
-IMPORTANT: Under supervision of the static code analyser, you will not be able to create an implementation of this interface which violates the modification rules.
+IMPORTANT: Under supervision of the analyser, you will not be able to create an implementation of this interface which violates the modification rules.
 This is intentional: no implementation should modify the data structure when `size` is called.
 
 Adding all elements of a collection to the object (in `addAll`) should not modify the input collection, whence the {nm}.
